# FastMemPool

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.clang.sh
cmake/: functions.cmake
include/: fast_mem_pool.h  specstack.h  specstatic.h
tests/: CMakeLists.txt
tests/common/file/: cfileadapter.cpp  cfileadapter.h  fileadapter.cpp  fileadapter.h
tests/common/system/linux/: linuxsystem.cpp  linuxsystem.h
tests/common/system/windows/: windowssystem.cpp  windowssystem.h
tests/test_exe/: test_exe.cpp
tests/test_exe/src/cases/: test_allocator1.cpp  test_auto_deallocate.cpp  test_base_usage.cpp  test_exception1.cpp  test_memcontrol1.cpp  test_random_access1.cpp  test_singleton1.cpp  test_singleton2.cpp  test_stl_allocator2.cpp
tests/test_overhead/: test_overhead.cpp
tests/test_overhead/src/: mem_pool.h  test_fastmempool.cpp  test_mempool.cpp  test_os_malloc.cpp
